# genesis-robust-quadrotor

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  coverage.xml  pyproject.toml
.agents/knowledge/: README.md  architecture.md  constraints.md  docs_maintenance.md
.agents/skills/: README.md
.claude/commands/: implement-category.md  implement-perturbation.md  judge-category.md
.github/workflows/: ci.yml
docs/: 00_feasibility.md  00b_sensor_models.md  01_perturbations_catalog.md  02_class_design.md  03_api_design.md  04_interactions.md  05_test_conventions.md  06_test_infrastructure.md  07_adversarial_training.md
docs/impl/: _perf_framework.py  _plot_framework.py  category_1_physics.md  category_2_motor.md  category_3_temporal.md  category_4_sensor.md  category_5_wind.md  category_6_action.md  category_7_payload.md  category_8_external.md  plot_category_1.py  plot_category_1_overhead.py  plot_category_2.py  plot_category_3.py  plot_category_4.py  plot_category_5.py  plot_category_6.py  plot_category_7.py  plot_category_8.py  plot_hero_overhead.py  plot_perf_cat1.py  plot_perf_cat2.py  plot_perf_cat3.py  plot_perf_cat4.py  plot_perf_cat5.py  plot_perf_cat6.py  plot_perf_cat7.py  plot_perf_cat8.py  plot_pilot_mass_shift.py
docs/media/: README.md  mp4_to_gif.py  record_demo.py
src/genesis_robust_rl/: sensor_models.py
tests/: conftest.py  test_placeholder.py
tests/adversarial/: test_curriculum.py  test_networks.py  test_ppo_agent.py  test_protocol.py  test_training_loop.py
tests/category_1_physics/: conftest.py  test_battery_voltage_sag.py  test_chassis_geometry_asymmetry.py  test_external_wrench.py  test_genesis_setter.py  test_perf_physics.py  test_propeller_blade_damage.py  test_structural_flexibility.py
tests/category_2_motor/: conftest.py  test_motor_cmd.py  test_perf_motor.py  test_wrench.py
tests/category_3_temporal/: conftest.py  test_behavioral.py  test_perf_temporal.py  test_temporal.py
tests/category_4_sensor/: conftest.py  test_obs_perturbations.py  test_perf_sensor.py  test_sensor_models.py
tests/category_5_wind/: conftest.py  test_perf_wind.py  test_wind.py
tests/category_6_action/: conftest.py  test_action.py  test_perf_action.py
(+411 files in other folders)
